# serverus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT-MAP.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wdio.scenarios.conf.ts
.github/workflows/: ci.yml  release.yml
crates/serverus-adapters/: Cargo.toml  README.md
crates/serverus-adapters/src/: lib.rs
crates/serverus-adapters/tests/: context_ids.rs
crates/serverus-application/: Cargo.toml  README.md
crates/serverus-application/src/: context.rs  lib.rs
crates/serverus-application/src/transfers/: error.rs  handler.rs  mod.rs  model.rs  ports.rs  sequencing.rs
crates/serverus-application/tests/: transfers.rs
crates/serverus-application/tests/transfers/: concurrency.rs  errors.rs  idempotency.rs  success.rs  support.rs
crates/serverus-domain/: Cargo.toml  README.md
crates/serverus-e2e-fixtures/: Cargo.toml
crates/serverus-e2e-fixtures/src/: editor.rs  ftp.rs  lib.rs  main.rs  manifest.rs  net.rs  s3.rs  ssh.rs  workspace.rs
crates/serverus-e2e-fixtures/src/ftp/: faults.rs  tests.rs
crates/serverus-e2e-fixtures/src/s3/: acl_backend.rs  probe.rs  tests.rs
crates/serverus-e2e-fixtures/src/ssh/: unavailable.rs  unix.rs
crates/serverus-e2e-fixtures/tests/: editor.rs  manifest.rs  process.rs  services.rs  workspace.rs
crates/serverus-runtime/: Cargo.toml  README.md
crates/serverus-runtime/src/: context.rs  lib.rs
crates/serverus-runtime/src/context/: coordinator.rs  error.rs  lease.rs  state.rs  switch.rs
crates/serverus-runtime/tests/: context_lifecycle.rs
crates/serverus-runtime/tests/context_lifecycle/: access.rs  support.rs  switching.rs
crates/serverus-testkit/: Cargo.toml  README.md
crates/serverus-testkit/src/: lib.rs
crates/serverus-testkit/tests/: context_fakes.rs
docs/: CONFIG_FORMAT.md  E2E_SCENARIOS.md  SPEC.md
docs/adr/: 0001-target-architecture.md  0002-testing-strategy.md
docs/business-requirements/: 01-product-scope.md  02-vault-and-connection-catalog.md  03-protocol-connections.md  04-sessions-and-terminal.md  05-file-management.md  06-transfers-and-remote-edit.md  (+5 more)
e2e-scenarios/: tsconfig.json
scripts/: check-architecture.mjs  check-architecture.self-test.mjs  check-bindings.mjs  check-bindings.self-test.mjs  clean-cache.mjs  with-signing-env.mjs
src/: App.svelte  App.test.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.scenarios.conf.json  windows-app-manifest.xml  windows-test-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  autolock.rs  commands.rs  error.rs  events.rs  lib.rs  local_fs.rs  main.rs  runtime_context.rs  state.rs
src-tauri/src/app_config/: tests.rs
src-tauri/src/autolock/: tests.rs
src-tauri/src/commands/: helpers.rs  local_copy.rs  local_copy_tests.rs  local_files.rs  misc.rs  prelude.rs  remote_edit.rs  remote_edit_tests.rs  remote_files.rs  s3.rs  sessions.rs  sessions_tests.rs  transfers.rs  tunnels.rs  types.rs  vault_access.rs  vault_access_tests.rs  vault_context_tests.rs  vault_io.rs  vault_location.rs  vault_location_cancellation_tests.rs  vault_location_tests.rs  vault_tree.rs
src-tauri/src/commands/helpers/: rollback.rs  session_operations.rs  task_runtime.rs  vault_operations.rs
src-tauri/src/commands/sessions/: connect.rs  host_key.rs  lifecycle.rs  terminal.rs
src-tauri/src/error/: tests.rs
src-tauri/src/session/: admission.rs  entry.rs  ftp.rs  lifecycle.rs  lifecycle_tests.rs  manager.rs  mod.rs  operation_admission.rs  remote_fs.rs  resource_cleanup.rs  s3.rs  sftp.rs  ssh.rs  terminal.rs  terminal_stream.rs  tests.rs  tunnel.rs
src-tauri/src/session/admission/: registry.rs  runner.rs  state.rs
src-tauri/src/session/connection/: chain.rs  mod.rs  plan.rs  planning.rs  planning_tests.rs  ssh.rs  storage.rs
src-tauri/src/session/ftp/: adapter.rs  config.rs  listing.rs  pool.rs  streams.rs  tests.rs
src-tauri/src/session/operation_admission/: registry.rs  runner.rs  state.rs
src-tauri/src/session/tests/: operations.rs  resource_cleanup.rs  terminal_stream.rs
src-tauri/src/state/: operation.rs  quick_unlock_selection_tests.rs  s3_upload_acl.rs  s3_upload_acl_tests.rs
src-tauri/src/transfer/: activity.rs  batch.rs  cleanup.rs  contracts.rs  controls.rs  enqueue_download.rs  enqueue_upload.rs  item.rs  item_lifecycle.rs  lifecycle.rs  local_target.rs  manager.rs  mod.rs  partial.rs  progress.rs  requests.rs  single_transfer.rs  sink.rs  tar_stream.rs  tree_size.rs  worker.rs
src-tauri/src/transfer/activity/: admission.rs  queue.rs  registry.rs  state.rs  tasks.rs
src-tauri/src/transfer/tar_stream/: archive.rs  tests.rs
src-tauri/src/transfer/tests/: activity.rs  conflicts.rs  controls.rs  lifecycle.rs  mod.rs  names.rs  pacing.rs  progress.rs  races.rs  retries.rs  support.rs
src-tauri/src/vault/: format.rs  import.rs  mod.rs  model.rs  quick_unlock.rs  tests.rs  tree.rs
src-tauri/src/vault/format/: tests.rs
src-tauri/src/vault/import/: tests.rs
src-tauri/src/vault/model/: connection.rs  input.rs  payload.rs  public.rs  settings.rs  tests.rs  tree.rs
src-tauri/src/vault/tree/: tests.rs
src-tauri/src/watcher/: admission.rs  cache.rs  editor.rs  lifecycle.rs  mod.rs  notifications.rs  open.rs  types.rs  upload.rs
src-tauri/src/watcher/admission/: lifecycle.rs  registry.rs  runner.rs  state.rs
src-tauri/src/watcher/tests/: admission.rs  cache.rs  editor.rs  lifecycle.rs  mod.rs  notifications.rs  support.rs  upload.rs
src-tauri/tests/: ftp_integration.rs  s3_integration.rs  sftp_integration.rs  ssh_integration.rs  tar_integration.rs  transfer_path_safety.rs  transfer_retry.rs  tunnel_integration.rs
src-tauri/tests/s3_integration/: acl_backend.rs  common.rs  multipart.rs  operations.rs  server.rs  transfers.rs
src-tauri/tests/sftp_integration/: common.rs  conflicts.rs  operations.rs  transfers.rs
src-tauri/tests/support/: mod.rs  transfer_context.rs
src-tauri/tests/transfer_path_safety/: fixtures.rs
(+196 files in other folders)
