[package]
name = "serverus-runtime"
version.workspace = true
description = "Actor-like Tokio runtime and lifecycle ownership for Serverus"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serverus-application.workspace = true
serverus-domain.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
async-trait.workspace = true
serverus-testkit.workspace = true

[lints]
workspace = true
